# python-total

./: .gitignore  .pylintrc  Cerveceria.py  README.md  pyproject.toml
day_01/: 01_First_Project.py  day_01.md
day_02/: 01_variables.py  02_integers_floats.py  03_conversiones.py  07_comisiones.py  day_02.md  formatear_cadenas.py  operadores.py  redondeo.py
day_03/: 03_metodos.py  06_diccionarios.py  day_03.md  diccionarios.py  listas.py
day_04/: 01_operadores_de_comparacion.py  02_operadores_logicos.py  03_control_de_flujo.py  04_loop_for.py  05_loop_while.py  06_rangos.py  07_enumerados.py  08_zips.py  09_min_max.py  09_randoms.py  10_comprension_listas.py  11_coincidencias.py  12_adivina_numero.py  day_04.md
day_05/: 01_ayuda.py  02_funciones.py  03_return_funciones.py  04_funciones_dinamicas.py  05_funciones_ejemplos.py  06_funciones_interacion.py  07_argumentos_indefinidos_args.py  08_argumentos_indefinidos_kwargs.py  09_el_ahorcado.py  day_05.md
day_06/: 01_leer_archivo.py  02_escribir_archivo.py  03_directorios.py  04_pathlib.py  05_path.py  06_limpiar_consola.py  07_recetario.py  day_06.md
day_07/: 01_clases.py  02_atributos.py  03_metodos.py  04_tipos_metodos.py  05_herencia.py  06_herencia_extendida.py  06_herencia_multiple.py  07_poliformismo.py  08_metodos_especiales.py  09_cuenta_bancaria.py  day_07.md
day_08/: ModuloOcupado.py  ModuloVacio.py  OperacionesPaquetes.py  cambia_texto_test.py  day_08.md  decoradores.py  farmacia_numeros.py  farmacia_turnos.py  generadores.py  manejo_errores.py  pylint.py
day_09/: 01_mod_colecciones.py  03_datatime.py  (+7 more)
(+50 files in other folders)
