[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pyjokes>=0.8.3",
    "pylint>=3.3.9",
    "pyttsx3>=2.99",
    "pywhatkit>=5.4",
    "requests>=2.32.5",
    "send2trash>=2.1.0",
    "speechrecognition>=3.14.5",
    "yfinance>=1.1.0",
]
